# crag

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
corpus/: README.md  benchmarks.xlsx  handbook.docx
corpus/code/: eviction.py  health_check.py
corpus/configs/: production.yaml  staging.yaml
corpus/notes/: airgap-deployment.md  bm25.md  chunking.md  embeddings.md  grounding-refusal.md  hnsw.md  incremental-ingestion.md  ollama.md  qdrant.md  quantization.md  reranking.md  rrf.md
corpus/runbooks/: cold-start.txt  incident-stale-answers.txt
docs/: 00-brief.md  01-methodology.md  02-recommendations.md  compliance-notes.md  cost-model.md  decision-log.md  hardware-fingerprint.md  open-questions.md  risk-register.md
scripts/: build_corpus.py
src/crag/: __init__.py  cli.py  config.py
src/crag/answer/: __init__.py  pipeline.py
src/crag/eval/: __init__.py  gold.yaml  judge.py  metrics.py
src/crag/ingest/: __init__.py  chunker.py  manifest.py  parsers.py  pipeline.py
src/crag/llm/: __init__.py  backends.py  prompts.py
src/crag/retrieval/: __init__.py  bm25.py  embed.py  rerank.py  search.py  store.py
studies/: _common.py
studies/00-baseline/: README.md  experiment.py  findings.md  results.json
studies/01-hybrid-fusion/: README.md  experiment.py  findings.md  results.json
studies/02-reranking/: README.md  experiment.py  findings.md  results.json
studies/03-chunking-grid/: README.md  experiment.py  findings.md  results.json
studies/04-embedding-bakeoff/: README.md  experiment.py  findings.md  results.json
tests/: test_chunker.py  test_manifest.py  test_parsers.py  test_search.py
