[project]
name = "crag"
version = "0.1.0"
description = "An offline RAG field investigation — case-study-driven reference for on-prem, low-VRAM document Q&A."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nauman Ahmed" }]
keywords = [
    "rag",
    "offline-llm",
    "vector-search",
    "qdrant",
    "ollama",
    "retrieval-augmented-generation",
    "edge-ai",
    "enterprise-search",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── core ────────────────────────────────────────────────────
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    # ── parsing ─────────────────────────────────────────────────
    "pymupdf>=1.24",          # PDF
    "python-docx>=1.1",       # DOCX
    "openpyxl>=3.1",          # XLSX
    "selectolax>=0.3.21",     # HTML (lxml-free)
    "markdown-it-py>=3.0",    # Markdown structural awareness
    # ── chunking + tokenisation ─────────────────────────────────
    "tiktoken>=0.7",
    # ── retrieval ───────────────────────────────────────────────
    "qdrant-client>=1.11",
    "sentence-transformers>=3.0",   # dense embeddings + cross-encoder rerank
    "rank-bm25>=0.2.2",
    # ── observability / measurement ─────────────────────────────
    "psutil>=5.9",
    "tabulate>=0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3"]
llamacpp = ["llama-cpp-python>=0.2.90"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
crag = "crag.cli:app"

[project.urls]
"Source" = "https://github.com/naumanAhmed3/crag"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # we let formatters / human judgement own line breaks
